--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "start": "gulp"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "browser-sync": "^2.26.3",
     "gulp": "3.9.1",
-    "run-sequence": "^2.2.1",
-    "gulp-concat": "^2.4.3",
-    "gulp-plumber": "^0.6.6",
-    "gulp-uglify": "^1.0.2",
-    "gulp-sourcemaps": "^2.6.4",
+    "gulp-babel": "^7.0.1",
+    "gulp-babel-minify": "0.5.0",
+    "gulp-concat": "^2.6.1",
     "gulp-download": "^0.0.1",
-    "yargs": "^12.0.2",
-    "browser-sync": "^2.26.3"
+    "gulp-plumber": "^1.2.0",
+    "gulp-sourcemaps": "^2.6.4",
+    "yargs": "^12.0.2"
   }
 }
